Part1/1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: karppimc/logoutput:1
          imagePullPolicy: Always  
          ports:
            - containerPort: 3001
          command: ["npm", "run", "start"]
