Part1/1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-service
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
